# tc_spvr_client

./: CMakeLists.txt  spvr_api.cpp  spvr_api.h  spvr_device.cpp  spvr_device.h  spvr_device_api.cpp  spvr_device_api.h  spvr_device_info.h  spvr_errors.h  spvr_event.cpp  spvr_event.h  spvr_event_api.cpp  spvr_event_api.h  spvr_manager.cpp  spvr_manager.h  spvr_server_info.h  spvr_stream.cpp  spvr_stream.h  spvr_user.cpp  spvr_user.h  spvr_user_api.cpp  spvr_user_api.h  spvr_user_device.cpp  spvr_user_device.h  spvr_user_device_api.cpp  spvr_user_device_api.h
